Fixed Security Config